<resources>
    <string name="app_name">EverIt</string>
    <string name="goto_login" translatable="false">Login</string>
    <string name="signup">Sign Up</string>
    <string name="hint_login">Already a member?</string>
    <string name="phone_number">Phone number</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="account_created">Account created successfully</string>
    <string name="edit">Edit</string>
    <string name="confirm">Confirm</string>
    <string name="title_activity_settings" translatable="false">SettingsActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label" translatable="false">First Fragment</string>
    <string name="second_fragment_label" translatable="false">Second Fragment</string>
    <string name="next" translatable="false">Next</string>
    <string name="previous" translatable="false">Previous</string>

    <string name="hello_first_fragment" translatable="false">Hello first fragment</string>
    <string name="hello_second_fragment" translatable="false">Hello second fragment. Arg: %1$s</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>

    <string name="account_updated">Account updated</string>
    <string name="account_not_updated">Account not updated</string>

    <string name="ordered">Ordered</string>
    <string name="confirmed">Confirmed</string>
    <string name="in_preparation">In progress</string>
    <string name="delivering">Delivering</string>
    <string name="ready">Ready</string>
    <string name="delivered">Delivered</string>

    <string name="late">Late</string>

    <string name="map_error">Unable to start map</string>
    <string name="search_autocomplete_error">Unable to suggests places</string>
    <string name="search_autocomplete_empty">No suggestions</string>

    <string name="no_orders">No orders</string>
    <string name="no_reviews">No reviews</string>
    <string name="no_results">No results</string>

    <string name="review_date">Review date</string>

    <string name="new_password_equals_old">New password cannot be equals to the old password</string>

    <string name="delete_account">Delete Account</string>
    <string name="message_confirm_delete">Are you sure you want to delete the account? All data will be deleted</string>
    <string name="message_confirm_delete_review">Are you sure you want to delete the review?</string>

    <string name="account_detail">Account detail</string>
    <string name="account_info">Account info</string>
    <string name="privacy_and_security">Privacy and security</string>

    <string name="review_number">Review number:</string>

    <string name="home_delivery">Home delivery</string>

    <string name="order_type">Order type</string>
    <string name="pickup_address">Pickup address</string>
    <string name="pickup_date">Pickup date</string>


    <string name="search">Search</string>
    <string name="open" translatable="false">OpenDrawer</string>
    <string name="close" translatable="false">CloseDrawer</string>
    <string name="order">My orders</string>
    <string name="home">Home</string>
    <string name="My_profile">My profile</string>
    <string name="logout">Logout</string>
    <string name="My_review">My reviews</string>
    <string name="oldPassword">Old password</string>
    <string name="newPassword">New Password</string>
    <string name="DeleteAccount">Delete account</string>
    <string name="newPasswordConf">Confirm new password</string>
    <string name="changePassword">Change password</string>
    <string name="privacySecurity">Privacy and security</string>
    <string name="title_result_list">Results</string>
    <string name="title_result_detail">Result Detail</string>
    <string name="reviews">Reviews</string>
    <string name="info">Info</string>
    <string name="ShowOnMaps">Show position on Maps</string>
    <string name="ChooseApp">Choose App</string>
    <string name="title_address_chooser">Address chooser</string>
    <string name="title_review_list">Reviews</string>
    <string name="title_review_detail">Review Detail</string>
    <string name="hint_delivery_address">Ex.  Via Caldarola 29/A, Bari</string>
    <string name="message_account_deleted">Your account has been successfully canceled</string>
    <string name="message_password_changed">The password has been successfully changed</string>
    <string name="message_password_wrong">The password format is incorrect. The password must be at least 8 characters long and contain at least one number</string>
    <string name="message_field_required">Required field</string>
    <string name="message_password_confirm_mismatch">Password mismatch</string>
    <string name="message_done">Done</string>
    <string name="Menu">Menu</string>
    <string name="ShowMeMenu">Show me the menu</string>
    <string name="minimum_purchase">Min purchase:</string>
    <string name="delivey_cost">Delivery cost:</string>
    <string name="gps_permission_explanation">The app needs access to your location to improve the search for restaurants near you</string>
    <string name="message_no_gps_permission">The app can\'t access your current position</string>


    <string name="cart_ic_toolbar">cart_ic_toolbar</string>
    <string name="Order">ORDER</string>
    <string name="your_products">Your products</string>
    <string name="Continue">Continue</string>
    <string name="order_notes">Order notes</string>
    <string name="delivery_notes">Delivery notes</string>
    <string name="Back">Back</string>
    <string name="empty_cart_message">It looks like your cart is empty! You must select some products before proceeding!</string>
    <string name="delivery_address_double_dots">Delivery address:</string>
    <string name="delivery_address">Delivery address</string>
    <string name="sub_total">Sub-total:</string>
    <string name="total">Total</string>
    <string name="DeleteCart">Delete cart</string>
    <string name="hint_spinner_delivery">Choose the delivery time</string>
    <string name="takeaway" translatable="false">Take away</string>
    <string name="menu">Menù</string>
    <string name="review_hint">Write your review here</string>
    <string name="make_review">Write a review</string>
    <string name="modify_review">Modify review</string>
    <string name="delete_review">Delete review</string>

    <string name="error_min_cost_cart">The order cost does not reach the min value</string>

    <string name="order_date_label">Order date</string>
    <string name="order_status_label">Order status</string>
    <string name="total_price_label">Total price</string>

    <string name="order_detail">Order detail</string>
    <string name="notes">Notes</string>

    <string name="delivery_date_label">Delivery date</string>
    <string name="order_number">Order number</string>

    <string name="address">Address:</string>

    <string name="open_shop">Open</string>
    <string name="closed_shop">Closed</string>

    <string name="new_review">New review</string>

    <string name="no_data">No data</string>

    <string name="no_delivery_time">There are not delivery time avaible for today</string>

    <string name="notification_channel_id" translatable="false">FirebaseNotifications-CustomerChannel</string>
    <string name="notification_channel_name">Server notifications</string>

    <string name="send_code">Send code</string>

    <string name="message_nfc_sender_activity_with_no_nfc">Communicate this code upon delivery to complete the procedure</string>
    <string name="message_nfc_sender_activity">Communicate this code upon delivery to complete the procedure. It is also possible to exchange code via NFC</string>
    <string name="message_nfc_sender_with_activation_request_nfc">Communicate this code upon delivery to complete the procedure. It is also possible to exchange code via NFC but first turn it on</string>

    <string name="code_sent_successfully">Code sent successfully</string>
    <string name="nfc_not_supported">Nfc is not supported on this device</string>


    <string name="show_on_map">Show on map</string>
    <string name="call_shop">Call this shop</string>
    <string name="current_state">Current state:</string>
    <string name="back_home">Back to the Home</string>
    <string name="order_success">Order placed successfully!</string>
    <string name="hint_order_notes">ex: lactose intolerant</string>
    <string name="hint_delivery_notes">ex: I\'ll pay with a 50 banknote</string>
    <string name="description_home_delivery">Choose the time you prefer, we will take care of the rest. Enjoy!</string>
    <string name="description_take_away">Your order will be ready for the selected time, you just have to pick it up!</string>
    <string name="order_number_label">Order number</string>
    <string name="password_confirm_wrong">Password confirm doesn\'t matches</string>

    <string name="title_activity_orders">My orders</string>
    <string name="title_activity_order_detail">Order detail</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_signup">Sign up</string>
    <string name="title_activity_cart">Cart</string>
    <string name="title_activity_account">My account</string>
    <string name="title_activity_order_receiver">Receive order</string>
</resources>
