<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.BaseActivity" >

    <group android:checkableBehavior="single"
        android:id="@+id/section_home">
        <item
            android:id="@+id/nav_home"
            android:icon="@android:drawable/ic_menu_search"
            android:title="@string/home" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/section_account">
        <item
            android:id="@+id/nav_profile"
            android:icon="@android:drawable/ic_menu_myplaces"
            android:title="@string/My_profile" />

        <item
            android:id="@+id/nav_order"
            android:icon="@android:drawable/ic_menu_today"
            android:title="@string/order" />

        <item
            android:id="@+id/nav_review"
            android:icon="@android:drawable/ic_menu_edit"
            android:title="@string/My_review" />

        <item
            android:id="@+id/nav_account_detail"
            android:icon="@drawable/ic_baseline_person_outline_24"
            android:title="@string/account_detail" />
    </group>

    <group android:checkableBehavior="single"
        android:id="@+id/section_settings">
        <item android:id="@+id/exit"
            android:title="@string/logout"/>
    </group>

</menu>