<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    app:startDestination="@+id/homeFragment">

    <fragment android:id="@+id/homeFragment"
        android:name="it.uniba.di.sms1920.everit.customer.activities.HomeFragment"
        android:label="@string/home"
        tools:layout="@layout/fragment_home"/>

    <fragment android:id="@+id/profileFragment"
        android:name="it.uniba.di.sms1920.everit.customer.activities.accountDetail.ProfileFragment"
        android:label="@string/profile"
        tools:layout="@layout/fragment_profile"/>

    <fragment android:id="@+id/accountDetailFragment"
        android:name="it.uniba.di.sms1920.everit.customer.activities.accountDetail.AccountDetailFragment"
        android:label="@string/settings"
        tools:layout="@layout/fragment_account_detail"/>

    <fragment android:id="@+id/privacySecurityFragment"
        android:name="it.uniba.di.sms1920.everit.customer.activities.accountDetail.PrivacySecurityFragment"
        android:label="@string/privacySecurity"
        tools:layout="@layout/fragment_privacy_security"/>

</navigation>