<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/content"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFFFFF"
    android:backgroundTint="?attr/colorPrimarySurface"
    android:fitsSystemWindows="true">

  <include layout="@layout/toolbar_default" />

  <ImageView
      android:id="@+id/ic_confirm"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginTop="50dp"
      android:layout_marginBottom="180dp"
      android:src="@drawable/ic_confirm_anim"
      app:layout_constraintBottom_toTopOf="@+id/buttonHome"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      app:layout_constraintVertical_bias="0.0" />


  <TextView
      android:id="@+id/textViewOrderSuccess"
      style="@style/TextViewMediumValue"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="8dp"
      android:layout_marginTop="24dp"
      android:layout_marginEnd="8dp"
      android:gravity="center"
      android:text="@string/order_success"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/ic_confirm" />

  <View
      android:id="@+id/view"
      android:layout_width="0dp"
      android:layout_height="2dp"
      android:layout_marginStart="30dp"
      android:layout_marginEnd="30dp"
      android:layout_marginBottom="24dp"
      android:background="@color/greyAccent"
      app:layout_constraintBottom_toTopOf="@+id/buttonDetail"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="0.0"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/buttonHome"
      style="@style/ButtonMain"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:layout_marginBottom="24dp"
      android:background="@drawable/btn_bg"
      android:text="@string/back_home"
      app:layout_constraintBottom_toTopOf="@+id/view"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintHorizontal_bias="1.0"
      app:layout_constraintStart_toStartOf="parent" />

  <Button
      android:id="@+id/buttonDetail"
      style="@style/ButtonMain"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      android:layout_marginStart="50dp"
      android:layout_marginEnd="50dp"
      android:layout_marginBottom="16dp"
      android:background="@drawable/btn_bg"
      android:text="@string/order_detail"
      app:layout_constraintBottom_toBottomOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>

